// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionResponsePanelComponent should snap with feedback session with questions 1`] = `
<tm-question-response-panel
  RESPONSE_HIDDEN_QUESTIONS={[Function Array]}
  __ngContext__={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  intent={[Function String]}
  previewAsPerson=""
  questions={[Function Array]}
  regKey=""
  session={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
>
  <div
    inviewport=""
  >
    <div />
    <tm-loading-retry>
      <div
        class="card bg-light mt-4"
        id="question-1-responses"
      >
        <div
          class="card-body"
        >
          <tm-question-text-with-info
            class="question-text-with-info"
          >
            <span
              class="d-flex flex-column flex-sm-row align-items-sm-center"
            >
              <h2
                class="question-number"
              >
                 Question 1: 
              </h2>
              <span
                class="question-text mx-sm-2"
              >
                How well did team member perform?
              </span>
              <button
                class="additional-info-button info-font-size me-auto border-0 p-0 bg-transparent text-primary"
              >
                 [more] 
              </button>
            </span>
          </tm-question-text-with-info>
          <div
            class="all-responses"
          >
            <div
              class="other-response"
            >
              <strong>
                Other responses (to you): 
              </strong>
              Responses are not visible to you. 
            </div>
            <div
              class="mt-4"
              id="given-responses"
            >
              <strong>
                Your own responses (to others):
              </strong>
              <div>
                <tm-student-view-responses>
                  <div
                    class="border-info card mt-4"
                  >
                    <div
                      class="card-header bg-info"
                    >
                      <span
                        id="response-recipient"
                      >
                        <b>
                          To:
                        </b>
                         recipient1
                      </span>
                    </div>
                    <div
                      class="card-body table-responsive"
                      style="padding: 0;"
                    >
                      <table
                        class="table"
                      >
                        <tbody>
                          <tr>
                            <td
                              id="response-giver"
                            >
                              <strong>
                                From:
                              </strong>
                               giver1 
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-single-response>
                              </tm-single-response>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </tm-student-view-responses>
              </div>
            </div>
          </div>
        </div>
      </div>
    </tm-loading-retry>
  </div><div
    inviewport=""
  >
    <div />
    <tm-loading-retry>
      <div
        class="card bg-light mt-4"
        id="question-2-responses"
      >
        <div
          class="card-body"
        >
          <tm-question-text-with-info
            class="question-text-with-info"
          >
            <span
              class="d-flex flex-column flex-sm-row align-items-sm-center"
            >
              <h2
                class="question-number"
              >
                 Question 2: 
              </h2>
              <span
                class="question-text mx-sm-2"
              >
                Rate your teammates in contribution
              </span>
              <button
                class="additional-info-button info-font-size me-auto border-0 p-0 bg-transparent text-primary"
              >
                 [more] 
              </button>
            </span>
          </tm-question-text-with-info>
          <div
            class="all-responses"
          >
            <div
              class="other-response"
            >
              <strong>
                Other responses (to you): 
              </strong>
              Responses are not visible to you. 
            </div>
            <div
              class="mt-4"
              id="given-responses"
            >
              <strong>
                Your own responses (to others):
              </strong>
              <div>
                <tm-student-view-responses>
                  <div
                    class="border-info card mt-4"
                  >
                    <div
                      class="card-header bg-info"
                    >
                      <span
                        id="response-recipient"
                      >
                        <b>
                          To:
                        </b>
                         recipient2
                      </span>
                    </div>
                    <div
                      class="card-body table-responsive"
                      style="padding: 0;"
                    >
                      <table
                        class="table"
                      >
                        <tbody>
                          <tr>
                            <td
                              id="response-giver"
                            >
                              <strong>
                                From:
                              </strong>
                               giver1 
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-single-response>
                              </tm-single-response>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </tm-student-view-responses>
              </div>
              <div>
                <tm-student-view-responses>
                  <div
                    class="border-info card mt-4"
                  >
                    <div
                      class="card-header bg-info"
                    >
                      <span
                        id="response-recipient"
                      >
                        <b>
                          To:
                        </b>
                         recipient3
                      </span>
                    </div>
                    <div
                      class="card-body table-responsive"
                      style="padding: 0;"
                    >
                      <table
                        class="table"
                      >
                        <tbody>
                          <tr>
                            <td
                              id="response-giver"
                            >
                              <strong>
                                From:
                              </strong>
                               giver1 
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-single-response>
                              </tm-single-response>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </tm-student-view-responses>
              </div>
            </div>
          </div>
        </div>
      </div>
    </tm-loading-retry>
  </div><div
    inviewport=""
  >
    <div />
    <tm-loading-retry>
      <div
        class="card bg-light mt-4"
        id="question-3-responses"
      >
        <div
          class="card-body"
        >
          <tm-question-text-with-info
            class="question-text-with-info"
          >
            <span
              class="d-flex flex-column flex-sm-row align-items-sm-center"
            >
              <h2
                class="question-number"
              >
                 Question 3: 
              </h2>
              <span
                class="question-text mx-sm-2"
              >
                Rate your teammates proficiency
              </span>
              <button
                class="additional-info-button info-font-size me-auto border-0 p-0 bg-transparent text-primary"
              >
                 [more] 
              </button>
            </span>
          </tm-question-text-with-info>
          <div
            class="all-responses"
          >
            <div
              class="other-response"
            >
              <strong>
                Other responses (to you): 
              </strong>
              Responses are not visible to you. 
            </div>
            <div
              class="mt-4"
              id="given-responses"
            >
              <strong>
                Your own responses (to others):
              </strong>
              <div>
                <tm-student-view-responses>
                  <div
                    class="border-info card mt-4"
                  >
                    <div
                      class="card-header bg-info"
                    >
                      <span
                        id="response-recipient"
                      >
                        <b>
                          To:
                        </b>
                         recipient3
                      </span>
                    </div>
                    <div
                      class="card-body table-responsive"
                      style="padding: 0;"
                    >
                      <table
                        class="table"
                      >
                        <tbody>
                          <tr>
                            <td
                              id="response-giver"
                            >
                              <strong>
                                From:
                              </strong>
                               giver1 
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-single-response>
                              </tm-single-response>
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-comment-table>
                                <div
                                  class="card"
                                >
                                  <ul
                                    class="list-group list-group-flush"
                                  >
                                    <li
                                      class="list-group-item"
                                    >
                                      <tm-comment-row>
                                        <div
                                          class="card"
                                        >
                                          <div
                                            class="card-body"
                                          >
                                            <div
                                              class="row comment-row"
                                            >
                                              <div
                                                class="col-12"
                                              >
                                                <span
                                                  class="text-secondary"
                                                >
                                                  <span
                                                    id="comment-giver-name"
                                                  >
                                                    comment-giver-1 commented at 
                                                  </span>
                                                  <span
                                                    class="ngb-tooltip-class"
                                                    style="margin-right: .25rem;"
                                                  >
                                                     17 Jan 1:09 PM
                                                  </span>
                                                </span>
                                                <i
                                                  aria-hidden="true"
                                                  class="fa fa-eye"
                                                />
                                                <div
                                                  class="float-end"
                                                >
                                                </div>
                                              </div>
                                              <div
                                                class="comment-text col-12"
                                              >
                                                this is a text
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </tm-comment-row>
                                    </li>
                                  </ul>
                                </div>
                              </tm-comment-table>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </tm-student-view-responses>
              </div>
            </div>
          </div>
        </div>
      </div>
    </tm-loading-retry>
  </div>
</tm-question-response-panel>
`;

exports[`QuestionResponsePanelComponent should snap with feedback session with questions of anonymous responses 1`] = `
<tm-question-response-panel
  RESPONSE_HIDDEN_QUESTIONS={[Function Array]}
  __ngContext__={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  intent={[Function String]}
  previewAsPerson=""
  questions={[Function Array]}
  regKey=""
  session={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
>
  <div
    inviewport=""
  >
    <div />
    <tm-loading-retry>
      <div
        class="card bg-light mt-4"
        id="question-1-responses"
      >
        <div
          class="card-body"
        >
          <tm-question-text-with-info
            class="question-text-with-info"
          >
            <span
              class="d-flex flex-column flex-sm-row align-items-sm-center"
            >
              <h2
                class="question-number"
              >
                 Question 1: 
              </h2>
              <span
                class="question-text mx-sm-2"
              >
                What comments do you have regarding each of your team members? (response is confidential and will only be shown to the instructor).
              </span>
            </span>
          </tm-question-text-with-info>
          <div
            class="all-responses"
          >
            <div
              class="other-response"
            >
              <strong>
                Other responses (to you): 
              </strong>
              Responses are not visible to you. 
            </div>
            <div
              class="mt-4"
              id="given-responses"
            >
              <strong>
                Your own responses (to others):
              </strong>
              <div>
                <tm-student-view-responses>
                  <div
                    class="border-info card mt-4"
                  >
                    <div
                      class="card-header bg-info"
                    >
                      <span
                        id="response-recipient"
                      >
                        <b>
                          To:
                        </b>
                         recipient1
                      </span>
                    </div>
                    <div
                      class="card-body table-responsive"
                      style="padding: 0;"
                    >
                      <table
                        class="table"
                      >
                        <tbody>
                          <tr>
                            <td
                              id="response-giver"
                            >
                              <strong>
                                From:
                              </strong>
                               giver1 
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-single-response>
                              </tm-single-response>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </tm-student-view-responses>
              </div>
              <div>
                <tm-student-view-responses>
                  <div
                    class="border-info card mt-4"
                  >
                    <div
                      class="card-header bg-info"
                    >
                      <span
                        id="response-recipient"
                      >
                        <b>
                          To:
                        </b>
                         recipient2
                      </span>
                    </div>
                    <div
                      class="card-body table-responsive"
                      style="padding: 0;"
                    >
                      <table
                        class="table"
                      >
                        <tbody>
                          <tr>
                            <td
                              id="response-giver"
                            >
                              <strong>
                                From:
                              </strong>
                               giver1 
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-single-response>
                              </tm-single-response>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </tm-student-view-responses>
              </div>
              <div>
                <tm-student-view-responses>
                  <div
                    class="border-info card mt-4"
                  >
                    <div
                      class="card-header bg-info"
                    >
                      <span
                        id="response-recipient"
                      >
                        <b>
                          To:
                        </b>
                         recipient3
                      </span>
                    </div>
                    <div
                      class="card-body table-responsive"
                      style="padding: 0;"
                    >
                      <table
                        class="table"
                      >
                        <tbody>
                          <tr>
                            <td
                              id="response-giver"
                            >
                              <strong>
                                From:
                              </strong>
                               giver1 
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-single-response>
                              </tm-single-response>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </tm-student-view-responses>
              </div>
            </div>
          </div>
        </div>
      </div>
    </tm-loading-retry>
  </div><div
    inviewport=""
  >
    <div />
    <tm-loading-retry>
      <div
        class="card bg-light mt-4"
        id="question-2-responses"
      >
        <div
          class="card-body"
        >
          <tm-question-text-with-info
            class="question-text-with-info"
          >
            <span
              class="d-flex flex-column flex-sm-row align-items-sm-center"
            >
              <h2
                class="question-number"
              >
                 Question 2: 
              </h2>
              <span
                class="question-text mx-sm-2"
              >
                How are the team dynamics thus far? (response is confidential and will only be shown to the instructor).
              </span>
            </span>
          </tm-question-text-with-info>
          <div
            class="all-responses"
          >
            <div
              class="other-response"
            >
              <strong>
                Other responses (to you): 
              </strong>
              Responses are not visible to you. 
            </div>
            <div
              class="mt-4"
              id="given-responses"
            >
              <strong>
                Your own responses (to others):
              </strong>
              <div>
                <tm-student-view-responses>
                  <div
                    class="border-info card mt-4"
                  >
                    <div
                      class="card-header bg-info"
                    >
                      <span
                        id="response-recipient"
                      >
                        <b>
                          To:
                        </b>
                         team1
                      </span>
                    </div>
                    <div
                      class="card-body table-responsive"
                      style="padding: 0;"
                    >
                      <table
                        class="table"
                      >
                        <tbody>
                          <tr>
                            <td
                              id="response-giver"
                            >
                              <strong>
                                From:
                              </strong>
                               giver1 
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-single-response>
                              </tm-single-response>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </tm-student-view-responses>
              </div>
            </div>
          </div>
        </div>
      </div>
    </tm-loading-retry>
  </div>
</tm-question-response-panel>
`;

exports[`QuestionResponsePanelComponent should snap with questions and responses when previewing results 1`] = `
<tm-question-response-panel
  RESPONSE_HIDDEN_QUESTIONS={[Function Array]}
  __ngContext__={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  intent={[Function String]}
  previewAsPerson=""
  questions={[Function Array]}
  regKey=""
  session={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
>
  <div
    inviewport=""
  >
    <div />
    <tm-loading-retry>
      <div
        class="card bg-light mt-4"
        id="question-1-responses"
      >
        <div
          class="card-body"
        >
          <tm-question-text-with-info
            class="question-text-with-info"
          >
            <span
              class="d-flex flex-column flex-sm-row align-items-sm-center"
            >
              <h2
                class="question-number"
              >
                 Question 1: 
              </h2>
              <span
                class="question-text mx-sm-2"
              >
                How well did team member perform?
              </span>
              <button
                class="additional-info-button info-font-size me-auto border-0 p-0 bg-transparent text-primary"
              >
                 [more] 
              </button>
            </span>
          </tm-question-text-with-info>
          <div
            class="alert alert-warning other-response non-visible-response-alert"
            role="alert"
          >
            <i
              class="fas fa-eye-slash"
            />
             Responses received for this question are omitted from this preview because some or all parts of them are not visible to instructors, as per their visibility settings. 
          </div>
        </div>
      </div>
    </tm-loading-retry>
  </div><div
    inviewport=""
  >
    <div />
    <tm-loading-retry>
      <div
        class="card bg-light mt-4"
        id="question-3-responses"
      >
        <div
          class="card-body"
        >
          <tm-question-text-with-info
            class="question-text-with-info"
          >
            <span
              class="d-flex flex-column flex-sm-row align-items-sm-center"
            >
              <h2
                class="question-number"
              >
                 Question 3: 
              </h2>
              <span
                class="question-text mx-sm-2"
              >
                Rate your teammates proficiency
              </span>
              <button
                class="additional-info-button info-font-size me-auto border-0 p-0 bg-transparent text-primary"
              >
                 [more] 
              </button>
            </span>
          </tm-question-text-with-info>
          <div
            class="all-responses"
          >
            <div
              class="alert alert-warning my-3 non-visible-comment-alert"
              role="alert"
            >
              <i
                class="fas fa-eye-slash"
              />
               Some comments (on responses) received for this question are omitted from this preview because they are not visible to instructors, as per their visibility settings. 
            </div>
            <div
              class="other-response"
            >
              <strong>
                Other responses (to you): 
              </strong>
              Responses are not visible to you. 
            </div>
            <div
              class="mt-4"
              id="given-responses"
            >
              <strong>
                Your own responses (to others):
              </strong>
              <div>
                <tm-student-view-responses>
                  <div
                    class="border-info card mt-4"
                  >
                    <div
                      class="card-header bg-info"
                    >
                      <span
                        id="response-recipient"
                      >
                        <b>
                          To:
                        </b>
                         recipient3
                      </span>
                    </div>
                    <div
                      class="card-body table-responsive"
                      style="padding: 0;"
                    >
                      <table
                        class="table"
                      >
                        <tbody>
                          <tr>
                            <td
                              id="response-giver"
                            >
                              <strong>
                                From:
                              </strong>
                               giver1 
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-single-response>
                              </tm-single-response>
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-comment-table>
                                <div
                                  class="card"
                                >
                                  <ul
                                    class="list-group list-group-flush"
                                  >
                                    <li
                                      class="list-group-item"
                                    >
                                      <tm-comment-row>
                                        <div
                                          class="card"
                                        >
                                          <div
                                            class="card-body"
                                          >
                                            <div
                                              class="row comment-row"
                                            >
                                              <div
                                                class="col-12"
                                              >
                                                <span
                                                  class="text-secondary"
                                                >
                                                  <span
                                                    id="comment-giver-name"
                                                  >
                                                    comment-giver-1 commented at 
                                                  </span>
                                                  <span
                                                    class="ngb-tooltip-class"
                                                    style="margin-right: .25rem;"
                                                  >
                                                     17 Jan 1:09 PM
                                                  </span>
                                                </span>
                                                <i
                                                  aria-hidden="true"
                                                  class="fa fa-eye"
                                                />
                                                <div
                                                  class="float-end"
                                                >
                                                </div>
                                              </div>
                                              <div
                                                class="comment-text col-12"
                                              >
                                                this is a text
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </tm-comment-row>
                                    </li>
                                  </ul>
                                </div>
                              </tm-comment-table>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </tm-student-view-responses>
              </div>
            </div>
          </div>
        </div>
      </div>
    </tm-loading-retry>
  </div><div
    inviewport=""
  >
    <div />
    <tm-loading-retry>
      <div
        class="card bg-light mt-4"
        id="question-4-responses"
      >
        <div
          class="card-body"
        >
          <tm-question-text-with-info
            class="question-text-with-info"
          >
            <span
              class="d-flex flex-column flex-sm-row align-items-sm-center"
            >
              <h2
                class="question-number"
              >
                 Question 4: 
              </h2>
              <span
                class="question-text mx-sm-2"
              >
                Do you have any feedback for the course?
              </span>
            </span>
          </tm-question-text-with-info>
          <div
            class="all-responses"
          >
            <div
              class="other-responses"
            >
              <tm-single-statistics>
                <tm-text-question-statistics />
              </tm-single-statistics>
              <div>
              </div>
            </div>
            <div
              class="mt-4"
              id="given-responses"
            >
              <strong>
                Your own responses (to others):
              </strong>
              <div>
                <tm-student-view-responses>
                  <div
                    class="border-info card mt-4"
                  >
                    <div
                      class="card-header bg-info"
                    >
                      <span
                        id="response-recipient"
                      >
                        <b>
                          To:
                        </b>
                         -
                      </span>
                    </div>
                    <div
                      class="card-body table-responsive"
                      style="padding: 0;"
                    >
                      <table
                        class="table"
                      >
                        <tbody>
                          <tr>
                            <td
                              id="response-giver"
                            >
                              <strong>
                                From:
                              </strong>
                               giver1 
                            </td>
                          </tr>
                          <tr>
                            <td>
                              <tm-single-response>
                                <tm-text-question-response>
                                  <div>
                                    Yes
                                  </div>
                                </tm-text-question-response>
                              </tm-single-response>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </tm-student-view-responses>
              </div>
            </div>
          </div>
        </div>
      </div>
    </tm-loading-retry>
  </div>
</tm-question-response-panel>
`;
